fix: fix hero heading gap and hero arrow down img scale

--- a/app/scss/layout/_hero.scss
+++ b/app/scss/layout/_hero.scss
@@ -48,17 +48,16 @@
       flex-flow: column nowrap;
       align-self: center;
       font-size: 4.625rem;
-      gap: 5rem;
-      transform: translateY(-15%);
+      gap: 6rem;
+      transform: translateY(-30%);
 
       >p {
         margin: 0;
       }
-    }
-  }
 
-  >* {
-    grid-row: 1/2;
-    grid-column: 1/2;
+      &-img {
+        scale: 1.1;
+      }
+    }
   }
 }
